nicknamer/server/lib/tests/snapshots/tests_tests_auth_endpoints_tests__can_reject_invalid_credentials.snap
---
source: nicknamer/server/tests/auth_endpoints_tests.rs
expression: snapshot_data
---
test_context: reject_invalid_credentials
status: 200
headers:
  content-type: text/html; charset=utf-8
  hx-reswap: outerHTML
  hx-retarget: "#login-message"
html_body:
  - "<div id=\"login-message\" class=\"text-error text-sm mt-2 text-center\">"
  - "  Login failed. Please try again."
  - "</div>"
