nicknamer/server/lib/tests/snapshots/tests_tests_auth_endpoints_tests__can_return_success_when_already_logged_in.snap
---
source: nicknamer/server/tests/auth_endpoints_tests.rs
expression: snapshot_data
---
test_context: return_success_when_already_logged_in
status: 200
headers:
  content-type: text/html; charset=utf-8
html_body:
  - "<div class=\"card-body items-center text-center\">"
  - "  <h2 class=\"card-title\">Login Successful!</h2>"
  - "  <p>Hello <b>admin</b></p>"
  - "  <div hx-boost=\"true\" class=\"card-actions justify-end\">"
  - "    <a href=\"/names\" class=\"btn btn-primary\">Manage Names</a>"
  - "  </div>"
  - "</div>"
